# fl_space

./: .gitignore  CLI_REFERENCE.md  CODING_STANDARDS.md  README.md  _quick_fl.py  _run_demo.py  _smoke_test.py  control_panel.bat  control_panel.py  fl_template.json  pyproject.toml  ruff_chk.txt  sim_template.json  test_export.json
.codebuddy/memory/: 2026-05-29.md  2026-06-01.md  2026-06-02.md  MEMORY.md
docs/: comparison_with_csdn_blog.md  dev_discussion_2026-06-01_02.md
examples/: demo_environment.py  demo_satellites.py  demo_skyfield.py  parse_log.py  quick_test.py  run_spacefl_experiment.py  standard_experiment.py
fl_space/: __init__.py  cli.py
fl_space.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fl_space/config/: __init__.py  defaults.py  loader.py  schemas.py  yaml_loader.py
fl_space/environment/: __init__.py  atmosphere.py  celestial_body.py  coordinate_utils.py  ground_station.py
fl_space/fl/: __init__.py  config.py  core.py  fedavg.py  fedbuff.py  fedprox.py  models.py  runner.py  scheduler.py  server.py  time_model.py
fl_space/integrations/: __init__.py
fl_space/integrations/flower/: __init__.py  adapter.py
fl_space/isl/: __init__.py  base.py  intra_cluster.py  los.py
fl_space/orbit/: __init__.py  kepler_orbit.py  satellite_config.py  satellite_phases.py  satellite_registry.py  skyfield_backend.py  visibility.py
fl_space/simulator/: __init__.py  contact_matrix.py  orbit_simulator.py
fl_space/utils/: __init__.py  viz.py
fl_space/viz/: __init__.py  i18n.py  orbit_plot.py
scripts/: run_cloud_experiment.sh
tests/: test_quick.py  test_time_model.py  verify_all.py
web/: index.html  server.py
文献/: README_文献阅读指南.md  [11]_Matthiesen2023_FL_Satellite_Constellations_中文翻译.md  [20]_Razmi2022_Ground-Assisted_FL_LEO_中文翻译.md  [21]_Razmi2022_Scheduling_FL_LEO_中文翻译.md  [22]_Zhai2024_FedLEO_中文翻译.md
文献/extracted/: [11]_matthiesen_2023.txt  [20]_razmi_2022_ground.txt  [21]_razmi_2022_sched.txt  [22]_zhai_2024_fedleo.txt  matthiesen_2023_extracted.txt  razmi_2022_ground_extracted.txt  razmi_2022_sched_extracted.txt  zhai_2024_extracted.txt
