[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-space"
version = "0.1.0"
description = "Space Federated Learning Research Framework — 模块化太空联邦学习研究框架"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FL Space Team"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
skyfield = [
    "skyfield>=1.48",
]
full = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "skyfield>=1.48",
]

[tool.ruff]
# 目标 Python 版本
target-version = "py39"

# 行宽（科研代码适当放宽到100）
line-length = 100

# 排除目录
exclude = [
    "__pycache__",
    ".git",
    ".codebuddy",
    "*.egg-info",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "F",      # Pyflakes — 未定义名称、未使用导入等
    "E",      # pycodestyle Error — 严重风格问题
    "W",      # pycodestyle Warning — 一般风格问题
    "I",      # isort — 导入排序
    "N",      # pep8-naming — 命名规范
    "B",      # flake8-bugbear — 常见bug检测
    "SIM",    # flake8-simplify — 代码简化建议
    "UP",     # pyupgrade — 现代Python语法
    "C4",     # flake8-comprehensions — 推导式优化
    "RUF",    # ruff 特有规则
    "PERF",   # perflint — 性能优化
]

# 忽略的规则
ignore = [
    "E501",   # 行过长（由 formatter 处理）
    "B008",   # 函数参数默认值中调用函数（如 dataclass field 用 factory）
    "B028",   # 禁止无消息的 assert 语句（测试需要）
    "SIM108", # 用 ternary 代替 if-else（不强制）
    "PERF203", # try-except 在循环中（有时刻意设计）
    "RUF002", # 中文文档中的全角标点（中文文档正常用法）
]

# 允许的 TODO/FIXME 注释
fixable = ["ALL"]

[tool.ruff.lint.isort]
# 导入排序配置
known-first-party = ["fl_space"]
force-sort-within-sections = true

[tool.ruff.lint.pep8-naming]
# 允许的命名例外
ignore-names = [
    "setUp",    # unittest 的 setUp
    "tearDown", # unittest 的 tearDown
    "GM",       # 引力常数标准物理符号 G × M
    "M",        # 平近点角 (Mean anomaly)
    "M0",       # 初始平近点角
    "E",        # 偏近点角 (Eccentric anomaly)
    "dE",       # 偏近点角增量
    "cos_E",    # cos(偏近点角)
    "sin_E",    # sin(偏近点角)
    "N",        # 轨道面内卫星数 / 轨道相关参数
]

[tool.ruff.lint.per-file-ignores]
# 代码注释中的全角标点（中文注释正常用法）
"*.py" = ["RUF003"]

[tool.ruff.format]
# 格式化配置
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["fl_space", "fl_space.*"]

[tool.setuptools.package-dir]
"" = "."
